force-app/main/default/objects/Criterium__mdt/Criterium__mdt.object-meta.xml
<CustomObject>
    <description>Defines a condition based on a field and value</description>
    <label>Criterium</label>
    <pluralLabel>Criteria</pluralLabel>
</CustomObject>