force-app/main/default/objects/Criterium__mdt/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
                <default>true</default>
                <label>equals</label>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>is blank</fullName>
            </value>
            <value>
                <fullName>is not blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>