force-app/main/default/objects/Criterium__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>API name of the field</description>
    <inlineHelpText>API name of the field</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>