force-app/main/default/objects/Criterium__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Add the value(s) that complete the condition you want to evaluate. If you have chosen &quot;in&quot; as your condition, make sure items of the list are separated by a comma. For boolean values, use &apos;true&apos; or &apos;false&apos;.</description>
    <inlineHelpText>Add the value(s) that complete the condition you want to evaluate. If you have chosen &quot;in&quot; as your condition, make sure items of the list are separated by a comma. For boolean values, use &apos;true&apos; or &apos;false&apos;.</inlineHelpText>
    <label>Value(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>